@@ -7,6 +7,8 @@ char *element_type_name (ELEMENT *element);
 int num_contents_children (ELEMENT *e);
 int num_args_children (ELEMENT *e);
 
+//HV *build_global_info (void);
+
 /* Defined in dump_perl.c */
 char *dump_tree_to_string_1 (void);
 char *dump_tree_to_string_2 (void);
