@@ -53,6 +53,8 @@ extern const char *digit_chars;
 extern ELEMENT *current_node;
 extern ELEMENT *current_section;
 
+extern GLOBAL_INFO global_info;
+
 #include "macro.h"
 
 /* In multitable.c */
